# ffmpeg_demo

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/daskks/ffmpeg/: MainActivity.java
app/src/main/java/com/daskks/ffmpeg/activitys/: Activity4CutTest.java
app/src/main/java/com/daskks/ffmpeg/helper/: FileUtils.java
app/src/main/java/com/daskks/ffmpeg/jniproxy/: BuildCompat.java  FFmpegJni.java
app/src/main/jni/: Android.mk  Application.mk  NLog.h  com_daskks_ffmpeg_jniproxy_FFmpegJni.cpp  com_daskks_ffmpeg_jniproxy_FFmpegJni.h
app/src/main/res/layout/: activity_cut.xml  activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
